--- a/commoncents.html
+++ b/commoncents.html
@@ -1,5 +1,5 @@
 <head>
-  <title>commoncents</title>
+  <title>CommonCents</title>
 </head>
 
 <body>
@@ -7,7 +7,7 @@
 </body>
 
 <template name="hello">
-  <h1>Hello World!</h1>
+  <h1>CommonCents: expense tracking webapp</h1>
   {{greeting}}
   <input type="button" value="Click" />
 </template>
