Refactored back end to be more mongo-like, added method for creating transaction group, display all of a user's tgroups on the front end

--- a/client/commoncents.html
+++ b/client/commoncents.html
@@ -4,19 +4,21 @@
 
 <body>
 	{{loginButtons align="right"}}
-	{{> userList}}
+	<h1>CommonCents: expense tracking webapp</h1>
+	{{> myGroups}}
 </body>
 
-<template name="userList">
-	<h1>CommonCents: expense tracking webapp</h1>
-	{{#each users}}
-		{{> user}}
+<template name="myGroups">
+	{{#each groups}}
+		{{> tgroup}}
 	{{/each}}
-	<input type="button" value="Click" />
+	<input type="button" value="Add group" />
 </template>
 
-<template name="user">
+<template name="tgroup">
 	<div>
-		{{username}}
+		Group: {{title}}
+		Created by: {{createdBy}}
+		Members: {{userIdList}}
 	</div>
 </template>
