Added some user validation, extra doc fields for searching. Working on basic user interface to add group, part of this is a user selector. Not done but basic search functionality seems to be good

--- a/client/commoncents.html
+++ b/client/commoncents.html
@@ -12,13 +12,42 @@
 	{{#each groups}}
 		{{> tgroup}}
 	{{/each}}
-	<input type="button" value="Add group" />
+	<input id="addGroupName" type="text" placeholder="group name" />
+	<input id="addGroup" type="button" value="Add group" />
+	{{> userSelector}}
 </template>
 
 <template name="tgroup">
+	<div style="margin-bottom: 15px">
+		<div>
+			Group: {{title}}
+		</div>
+		<div>
+			Created by: {{creatorDisplayName}}
+		</div>
+		<div>
+			Members:
+		</div>
+		<div style="margin-left: 15px">
+			{{#each users}}
+			<div>
+				{{userDisplayName}}
+			</div>
+			{{/each}}
+		</div>
+	</div>
+</template>
+
+<template name="userSelector">
 	<div>
-		Group: {{title}}
-		Created by: {{createdBy}}
-		Members: {{userIdList}}
+		<input id="userTextBox" type="text" placeholder="enter user name" />
+	</div>
+	<div style="position:absolute;">
+		<ul style="position:relative; top: -18px; left:2px; border: 1px solid gray; overflow-y:auto; width:140px; height:100px;">
+			{{#each users}}
+			<li>{{username}}</li>
+			<input type="hidden" name="userSelect" value="{{_id}}" />
+			{{/each}}
+		</ul>
 	</div>
 </template>
