Fixed up css on search selector, no more inline styling

--- a/client/commoncents.html
+++ b/client/commoncents.html
@@ -14,10 +14,10 @@
 	{{/each}}
 	<input id="addGroupName" type="text" placeholder="group name" />
 	<input id="addGroup" type="button" value="Add group" />
-	<div style="display:inline-block;">
+	<div>
 		{{> searchSelector userSelector}}
 	</div>
-	<div style="display:inline-block;">
+	<div>
 		{{> searchSelector userSelector2}}
 	</div>
 </template>
