--- a/client/modules/search_selector.html
+++ b/client/modules/search_selector.html
@@ -1,12 +1,12 @@
 <template name="searchSelector">
 	<div class="search-selector-{{uniqueId}}">
 		{{#constant}}
-		<div style="width:175px;">
+		<div class="search-selector-searchbox-wrapper">
 			<input class="search-selector-searchbox" type="text" placeholder="search" />
 		</div>
 		{{/constant}}
-		<div class="{{resultsShowing}}" style="position:absolute; width:175px; height:100px;">
-			<div style="position:relative; top:-2px; left:3px; border:1px solid gray; overflow-y:auto;">
+		<div class="search-selector-resultsbox-wrapper {{resultsShowing}}">
+			<div class="search-selector-resultsbox">
 				{{#each data}}
 					{{#defparent ..}}
 					{{> searchSelector_item }}
@@ -18,7 +18,7 @@
 </template>
 
 <template name="searchSelector_item">
-	<div class="search-selector-li {{selected}}" style="padding:0px 5px;">
+	<div class="search-selector-li {{selected}}">
 		{{displayName}}
 	</div>
 	<input type="hidden" name="dataSelect" value="{{itemId}}" />
