--- a/client/commoncents.html
+++ b/client/commoncents.html
@@ -12,8 +12,10 @@
 	{{#each groups}}
 		{{> tgroup}}
 	{{/each}}
-	<input id="addGroupName" type="text" placeholder="group name" />
-	<input id="addGroup" type="button" value="Add group" />
+	<div style="clear:both;">
+		<input id="addGroupName" type="text" placeholder="group name" />
+		<input id="addGroup" type="button" value="Add group" />
+	</div>
 	<div>
 		{{> searchSelector userSelector}}
 	</div>
@@ -23,22 +25,21 @@
 </template>
 
 <template name="tgroup">
-	<div style="margin-bottom: 15px">
-		<div>
-			Group: {{title}}
+	<div style="float:left; width: 250px; margin: 5px; padding: 5px; border-radius: 10px; border:2px solid #666; overflow:auto; background-color: #010;">
+		<div class="group-title" style="text-align:center; font-weight: bold; font-size: 18px; margin: 3px; cursor:pointer;">
+			{{title}}
 		</div>
-		<div>
-			Created by: {{creatorDisplayName}}
-		</div>
-		<div>
-			Members:
-		</div>
-		<div style="margin-left: 15px">
-			{{#each users}}
-			<div>
-				{{userDisplayName}}
+		<div class="group-more-info {{isExpanded}}">
+			<div style="text-align: center; font-size: 12px; margin:1px;">
+				by {{creatorDisplayName}}
 			</div>
-			{{/each}}
+			<div style="text-align:center;">
+				{{#each users}}
+				<div style="display:inline-block; margin: 2px; padding:3px; border-radius:5px; background-color:#222; font-size: 14px;">
+					{{userDisplayName}}
+				</div>
+				{{/each}}
+			</div>
 		</div>
 	</div>
 </template>
