Made UI for transaction group adding look nicer

--- a/client/modules/search_selector.html
+++ b/client/modules/search_selector.html
@@ -2,7 +2,7 @@
 	<div class="search-selector-{{uniqueId}}">
 		<div class="search-selector-searchbox-wrapper">
 			{{#constant}}
-			<input class="search-selector-searchbox" type="text" placeholder="search" />
+			<input class="search-selector-searchbox" type="text" placeholder="{{placeholderText}}" />
 			{{/constant}}
 			{{#if selectionMade}}
 			<div class="checkmark"/>
