Updated the user interface

--- a/client/commoncents_new.html
+++ b/client/commoncents_new.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  <title>Groundwork CSS &hearts;</title>
+  <title>&#36; CommonCents &#36;</title>
   <!-- Modernizr -->
   <script src="./js/libs/modernizr-2.6.2.min.js"></script>
   <!-- jQuery -->
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="one third padded">
-          <h1 class="responsive zero" data-compression="5.65" data-min="20" data-max="200"><a href="#">CommonCents</a></h1>
+          <h1 class="responsive zero" data-compression="5.65" data-min="20" data-max="200">CommonCents</h1>
         </div>
         <div class="two thirds padded">
           <nav class="inline pull-right gap-top">
@@ -76,7 +76,7 @@
           <li>One last transaction!</li>
         </ul>
         <hr/>
-        <h3>Your Friends</h3>
+        <h3>Your Groups</h3>
         <div class="row">
           <div class="one mobile half padded">
             <img src="http://placehold.it/120x85/198d98/ffffff" alt=""/>
@@ -110,22 +110,174 @@
             <img src="http://placehold.it/880x400/24cada/ffffff&text=$0" alt=""/>
           </div>
         </div>
-        <img src="http://placehold.it/300x200/198d98/ffffff/" alt=""class="pull-left gap-right gap-bottom" />
-        <h1>Add Expense</h1>
-        <p>Replace this with a form</p>
-        <hr/>
-        <img src="http://placehold.it/300x200/198d98/ffffff/" alt=""class="pull-right gap-left gap-bottom" />
-        <h3>Pay Expense</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in.</p>
-        <hr/>
-        <img src="http://placehold.it/300x200/198d98/ffffff/" alt=""class="pull-left gap-right gap-bottom" />
-        <h3>Settle Transaction</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in.</p>
+        <h3>Add Expense</h3>
+        <div class="row">
+          <div class="one thirds padded">
+            <img src="http://placehold.it/250x550/bada55/ffffff/" alt=""class="pull-right gap-left gap-bottom" />
+          </div>
+          <div class="two third padded">
+            <form action="#" method="post">
+              <div class="row">
+                <div class="one whole padded">
+                  <label for="group">Transaction Group</label>
+                  <span class="select">
+                    <select>
+                      <option value="" disabled selected>Choose Group</option>
+                      <option value="uniqueID1">ECE Group</option>
+                      <option value="uniqueID2">Gun Hill roommates</option>
+                      <option value="uniqueID3">Asian Explosion</option>
+                    </select>
+                  </span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="one half padded">
+                  <div class="row">
+                    <div class="one mobile sixth">
+                      <span class="prefix">$</span>
+                    </div>
+                    <div class="five mobile sixths">
+                      <input type="number" id="total-amount" placeholder="Total Amount" />
+                    </div>
+                  </div>
+                </div>
+                <div class="one half padded">
+                  <a class="button">Split Equally</a>
+                </div>
+              </div>
+              <!-- This part will be autogenerated depending on how many 
+                   users are in the group
+                -->
+              <div class="one whole padded">
+                <label for="group-members">Group Members</label>
+                <div class="row">
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">@</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="text" id="username" placeholder="username" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">$</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="number" id="user1-amount" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">@</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="text" id="username" placeholder="username" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">$</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="number" id="user1-amount" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">@</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="text" id="username" placeholder="username" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="one half padded">
+                    <div class="row">
+                      <div class="one mobile sixth">
+                        <span class="prefix">$</span>
+                      </div>
+                      <div class="five mobile sixths">
+                        <input type="number" id="user1-amount" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- End of autogenerated part -->
+              <div class="row">
+                <div class="one whole padded">
+                  <label for="comments">Comments</label>
+                  <textarea id="comments" placeholder="Enter any comments you have about the transaction here... this message will be visible to all participants in the transaction."></textarea>
+                </div>
+              </div>
+              <div class="row">
+                <button>Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <h3>Submit Payment</h3>
+        <div class="row">
+          <div class="one thirds padded">
+            <img src="http://placehold.it/250x370/c82647/ffffff/" alt=""class="pull-right gap-left gap-bottom" />
+          </div>
+          <div class="two third padded">
+            <form action="#" method="post">
+              <label for="pay-to">Payment:</label>
+              <div class="row">
+                <div class="one whole padded">
+                  <div class="one mobile sixth">
+                    <span class="prefix">@</span>
+                  </div>
+                  <div class="five mobile sixths">
+                    <input type="text" id="username" placeholder="username" />
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="one whole padded">
+                  <div class="one mobile sixth">
+                    <span class="prefix">$</span>
+                  </div>
+                  <div class="five mobile sixths">
+                    <input type="number" id="payment-amount" />
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="one whole padded">
+                  <label for="comments">Comments</label>
+                  <textarea id="comments" placeholder="Enter any comments you have about the payment here."></textarea>
+                </div>
+              </div>
+              <div class="row">
+                <div class="one while padded">
+                  <button>Submit</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
       </section>
     </article>
     
     <footer class="footer align-right">
-        <p>&copy 2013 <a href="http://jasondsouza.org">Jason Dsouza</a> and <a href="http://justinchurchill.com">Justin Churchill</a>.</p>
+        <p>&copy; 2013 <a href="http://jasondsouza.org">Jason Dsouza</a> and <a href="http://justinchurchill.com">Justin Churchill</a>.</p>
     </footer>
 
   </div>
