Small update to align button

--- a/client/commoncents_new.html
+++ b/client/commoncents_new.html
@@ -225,7 +225,9 @@
                 </div>
               </div>
               <div class="row">
-                <button>Submit</button>
+                <div class="one whole padded">
+                  <button>Submit</button>
+                </div>
               </div>
             </form>
           </div>
@@ -265,7 +267,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="one while padded">
+                <div class="one whole padded">
                   <button>Submit</button>
                 </div>
               </div>
